Fix compiler warning.
Signed-off-by: Franz Wilhelmstötter <franz.wilhelmstoetter@gmail.com>